--- a/locale/fr.po
+++ b/locale/fr.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Supybot-fr\n"
-"POT-Creation-Date: 2011-08-07 11:46+CEST\n"
+"POT-Creation-Date: 2012-06-13 16:28+CEST\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Valentin Lorentz <progval@gmail.com>\n"
 "Language-Team: ProgVal <progval@gmail.com>\n"
@@ -62,19 +62,53 @@ msgstr "Je viens de me réveiller :)"
 msgid ""
 "[<channel>] [<user>]\n"
 "\n"
-"        Replies with the friends (i.e. people who one subscribes to) of the\n"
-"        <user>. If <user> is not given, it defaults to the <channel>'s account.\n"
-"        If <channel> is not given, it defaults to the current channel."
+"        Replies with the people this <user> follows. If <user> is not given, it\n"
+"        defaults to the <channel>'s account. If <channel> is not given, it\n"
+"        defaults to the current channel."
 msgstr ""
 "[<canal>] [<utilisateur>]\n"
 "\n"
-"Répond avec les amis (c'est à dire les personnes auquelles quelqu'un s'abonne) de l'<utilisateur>. Si l'<utilisateur> n'est pas donné, il correspond par défaut au compte du <canal>. Si le <canal> n'est pas donné, il correspond par défaut au canal courant."
+"Répond avec les personne que l'<utilisateur> suit. Si l'<utilisateur> n'est pas donné, il correspond par défaut au compte du <canal>. Si le <canal> n'est pas donné, il correspond par défaut au canal courant."
 
 #: plugin.py:103
+#: plugin.py:126
 msgid "No account is associated with this channel. Ask an op, try with another channel, or provide a user name."
 msgstr "Aucun compte n'est associé à ce canal. Demande à un op, essayez avec un autre canal, ou donnez un nom d'utilisateur."
 
 #: plugin.py:120
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Replies with the people that follow this account. If <channel> is not\n"
+"        given, it defaults to the current channel."
+msgstr ""
+"[<canal>]\n"
+"\n"
+"Liste les personnes qui suivent l'utilisateur associé au <canal>. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:139
+#, fuzzy
+msgid ""
+"[<channel>] <recipient> <message>\n"
+"\n"
+"        Sends a <message> to <recipient> from the account associated with the\n"
+"        given <channel>. If <channel> is not given, it defaults to the current\n"
+"        channel."
+msgstr ""
+"[<canal>] <message>\n"
+"\n"
+"Modifie le statut du compte associé avec le <canal> donné. Si le <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:146
+#: plugin.py:168
+msgid "No account is associated with this channel. Ask an op or try with another channel."
+msgstr "Aucun compte n'est associé à ce canal. Demandez à un op, ou essayez avec un autre canal."
+
+#: plugin.py:151
+msgid "Sorry, your message exceeds 140 characters (%i)"
+msgstr "Désolé, votre tweet excède 140 caractères (%i)."
+
+#: plugin.py:161
 msgid ""
 "[<channel>] <message>\n"
 "\n"
@@ -86,17 +120,13 @@ msgstr ""
 "\n"
 "Modifie le statut du compte associé avec le <canal> donné. Si le <canal> n'est pas donné, il correspond par défaut au canal courant."
 
-#: plugin.py:127
-msgid "No account is associated with this channel. Ask an op or try with another channel."
-msgstr "Aucun compte n'est associé à ce canal. Demandez à un op, ou essayez avec un autre canal."
-
-#: plugin.py:132
+#: plugin.py:173
 msgid "Sorry, your tweet exceeds 140 characters (%i)"
 msgstr "Désolé, votre tweet excède 140 caractères (%i)."
 
-#: plugin.py:141
+#: plugin.py:182
 msgid ""
-"[<channel>] [<user>] [--since <oldest>] [--max <newest>] [--count <number>]         [--noretweet]\n"
+"[<channel>] [<user>] [--since <oldest>] [--max <newest>] [--count <number>]         [--noretweet] [--with-id]\n"
 "\n"
 "        Replies with the timeline of the <user>.\n"
 "        If <user> is not given, it defaults to the account associated with the\n"
@@ -108,21 +138,23 @@ msgid ""
 "        If --noretweet is given, only native user's tweet will be displayed.\n"
 "        "
 msgstr ""
-"[<channel>|<user>] [--since <ancien>] [--max <récent>] [--count <nombre>] [--noretweet]\n"
+"[<channel>|<user>] [--since <ancien>] [--max <récent>] [--count <nombre>] [--noretweet] [--with-id]\n"
 "\n"
 "Répond avec la timeline de l'<utilisateur>.Si l'<utilisateur> n'est pas donné, il correspond par défaut au compte associé au <canal>. Si le <canal> n'est pas donné, il correspond par défaut au canal courant.Si ils sont donnés, --since et --max prennent chacun un ID de tweet, utilisés comme \"frontières\" de la requête de tweets.Si il est donné, --count prend un entier, qui correspond au nombre de tweets à afficher. Si --noretweet est donné, seuls les tweets natifs de l'utilisateur seront affichés."
 
-#: plugin.py:163
-#: plugin.py:261
-#: plugin.py:284
+#: plugin.py:205
+#: plugin.py:326
+#: plugin.py:349
+#: plugin.py:373
+#: plugin.py:416
 msgid "No account is associated with this channel. Ask an op, try with another channel."
 msgstr "Aucun compte n'est associé à ce canal. Demandez à un op, ou essayez avec un autre canal."
 
-#: plugin.py:173
+#: plugin.py:215
 msgid "This user protects his tweets; you need to fetch them from a channel whose associated account can fetch this timeline."
 msgstr "Cet(te) utilisateur(trice) protège ses tweets ; vous devez les récupérer à partir d'un canal dont le compte Twitter associé peut récupérer cette timeline."
 
-#: plugin.py:193
+#: plugin.py:239
 msgid ""
 "[<channel>] [--since <oldest>]\n"
 "\n"
@@ -135,12 +167,13 @@ msgstr ""
 "\n"
 "Répond avec la timeline publique, en tant que l'utilisateur associé au <canal>. Si <canal> n'est pas donné, il correspond par défaut au canal courant. Si il est donné, --since prend un ID de tweet, qui est utilisé en tant que borne"
 
-#: plugin.py:210
-#: plugin.py:240
+#: plugin.py:256
+#: plugin.py:286
+#: plugin.py:309
 msgid "No tweets"
 msgstr "Aucun tweet."
 
-#: plugin.py:223
+#: plugin.py:269
 msgid ""
 "[<channel>] [--since <oldest>]\n"
 "\n"
@@ -153,7 +186,19 @@ msgstr ""
 "\n"
 "Répond avec la timeline de réponses, en tant que l'utilisateur associé au <canal>. Si <canal> n'est pas donné, il correspond par défaut au canal courant. Si il est donné, --since prend un ID de tweet, qui est utilisé en tant que borne"
 
-#: plugin.py:253
+#: plugin.py:299
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Current trending topics\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canal>] <utilisateur>\n"
+"\n"
+"Trending topics actuels. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:318
 msgid ""
 "[<channel>] <user>\n"
 "\n"
@@ -165,12 +210,15 @@ msgstr ""
 "\n"
 "Suit l'<utilisateur> en tant que l'utilisateur associé au <canal>. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
 
-#: plugin.py:267
-#: plugin.py:290
+#: plugin.py:332
+#: plugin.py:355
+#: plugin.py:379
+#: plugin.py:400
+#: plugin.py:422
 msgid "An error occurred"
 msgstr "Une erreur est survenue."
 
-#: plugin.py:276
+#: plugin.py:341
 msgid ""
 "[<channel>] <user>\n"
 "\n"
@@ -181,4 +229,40 @@ msgstr ""
 "[<canal>] <utilisateur>\n"
 "\n"
 "Cesse de suivre l'<utilisateur> en tant que l'utilisateur associé au <canal>. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:365
+msgid ""
+"[<channel>] <id>\n"
+"\n"
+"        Delete a specified status with id <id>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canal>] <id>\n"
+"\n"
+"Supprime le tweet correspondant à l'<id>. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:389
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Print some stats\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canal>] <utilisateur>\n"
+"\n"
+"Affiche des statistiques. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
+
+#: plugin.py:408
+msgid ""
+"[<channel>] <user>\n"
+"\n"
+"        Return profile image for a specified <user>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canal>] <utilisateur>\n"
+"\n"
+"Retourne l'image de l'<utilisateur>. Si <canal> n'est pas donné, il correspond par défaut au canal courant."
 
