--- a/locale/it.po
+++ b/locale/it.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Supybot-fr\n"
 "POT-Creation-Date: 2011-02-26 09:49+CET\n"
-"PO-Revision-Date: 2011-07-29 18:21+0200\n"
-"Last-Translator: skizzhg <skizzhg@gmx.com>\n"
+"PO-Revision-Date: 2012-06-17 19:65+0200\n"
+"Last-Translator: skizzhg <skizzhg@	mx.com>\n"
 "Language-Team: Italian <skizzhg@gmx.com>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -48,37 +48,102 @@ msgid ""
 "        channel's account (%s)"
 msgstr "La chiave d'accesso Twitter segreta per l'account di questo canale (%s)"
 
-#: plugin.py:58
+#: plugin.py:56
+#, docstring
+msgid "Api with retweet support."
+msgstr "API con supporto per i retweet."
+
+#: plugin.py:59
+#, docstring
+msgid ""
+"Retweet a tweet with the Retweet API\n"
+"\n"
+"        The twitter.Api instance must be authenticated.\n"
+"\n"
+"        Args:\n"
+"        id: The numerical ID of the tweet you are retweeting\n"
+"\n"
+"        Returns:\n"
+"        A twitter.Status instance representing the retweet posted\n"
+"        "
+msgstr ""
+"Fa il retweet di un tweet con l'API Retweet.\n"
+"\n"
+"        L'istanza di twitter.Api deve essere autenticata.\n"
+"\n"
+"        Argomenti:\n"
+"        id: l'ID numerico del tweet che stai ri-postando (retweet).\n"
+"\n"
+"        Rinvii:\n"
+"        Un'istanza di twitter.Status che rappresenta il retweet postato.\n"
+"        "
+
+#: plugin.py:86
 #, docstring
 msgid ""
 "Add the help for \"@plugin help Twitter\" here\n"
 "    This should describe *how* to use this plugin."
 msgstr ""
 
-#: plugin.py:68
+#: plugin.py:96
 msgid "I just woke up. :)"
 msgstr "Mi sono appena svegliato :)"
 
-#: plugin.py:96
+#: plugin.py:124
 #, docstring
 msgid ""
 "[<channel>] [<user>]\n"
 "\n"
-"        Replies with the friends (i.e. people who one subscribes to) of the\n"
-"        <user>. If <user> is not given, it defaults to the <channel>'s account.\n"
-"        If <channel> is not given, it defaults to the current channel."
+"        Replies with the people this <user> follows. If <user> is not given, it\n"
+"        defaults to the <channel>'s account. If <channel> is not given, it\n"
+"        defaults to the current channel."
 msgstr ""
 "[<canale>] [<utente>]\n"
 "\n"
-"        Risponde agli amici (le persone alle quali ci si iscrive) di <utente>.\n"
-"        Se <utente> non è specificato, il valore predefinito è l'account di <canale>.\n"
-"        Se <canale> non è fornito, usa quello attuale."
+"        Risponde alle persone seguite da <utente>. Se <utente> non è specificato\n"
+"        il valore predefinito è l'account di <canale>. Se <canale> non è fornito\n"
+"        usa quello attuale."
 
-#: plugin.py:103
+#: plugin.py:131 plugin.py:154
 msgid "No account is associated with this channel. Ask an op, try with another channel, or provide a user name."
 msgstr "Nessun account associato a questo canale. Chiedi a un op, prova un altro canale o fornisci un nome utente."
 
-#: plugin.py:120
+#: plugin.py:148
+#, docstring
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Replies with the people that follow this account. If <channel> is not\n"
+"        given, it defaults to the current channel."
+msgstr ""
+"[<canale>]\n"
+"\n"
+"        Risponde alle persone che seguono questo account. Se <canale> non è fornito\n"
+"        usa quello attuale."
+
+#: plugin.py:167
+#, docstring
+msgid ""
+"[<channel>] <recipient> <message>\n"
+"\n"
+"        Sends a <message> to <recipient> from the account associated with the\n"
+"        given <channel>. If <channel> is not given, it defaults to the current\n"
+"        channel."
+msgstr ""
+"[<canale>] <destinatario> <messaggio>\n"
+"\n"
+"        Invia <messaggio> a <destinatario> dall'account associato con il dato\n"
+"        <canale>. Se <canale> non è fornito usa quello attuale."
+
+#: plugin.py:174 plugin.py:196
+msgid "No account is associated with this channel. Ask an op or try with another channel."
+msgstr "Nessun account associato a questo canale. Chiedi a un op prova un altro canale."
+
+#: plugin.py:179
+msgid "Sorry, your message exceeds 140 characters (%i)"
+msgstr "Spiacente, il tuo messaggio supera 140 caratteri (%i)."
+
+#: plugin.py:189
 #, docstring
 msgid ""
 "[<channel>] <message>\n"
@@ -92,18 +157,23 @@ msgstr ""
 "        Aggiorna con <messaggio> lo stato dell'account associato a <canale>.\n"
 "        Se <canale> non è fornito, usa quello attuale."
 
-#: plugin.py:127
-msgid "No account is associated with this channel. Ask an op or try with another channel."
-msgstr "Nessun account associato a questo canale. Chiedi a un op o prova un altro canale."
 
-#: plugin.py:132
+#: plugin.py:201
 msgid "Sorry, your tweet exceeds 140 characters (%i)"
-msgstr "Spiacente, il tuo tweet supera i 140 caratteri (%i)."
+msgstr "Spiacente, il tuo tweet supera 140 caratteri (%i)."
 
-#: plugin.py:141
+#: plugin.py:210
 #, docstring
 msgid ""
-"[<channel>|<user>] [--since <oldest>] [--max <newest>] [--count <number>] [--noretweet]\n"
+"[<channel>] <id>\n"
+"\n"
+"        Retweets the message with the given ID."
+msgstr "Fa il retweet del messaggio con il dato ID."
+
+#: plugin.py:224
+#, docstring
+msgid ""
+"[<channel>] [--since <oldest>] [--max <newest>] [--count <number>]         [--noretweet] [--with-id] [<user>]\n"
 "\n"
 "        Replies with the timeline of the <user>.\n"
 "        If <user> is not given, it defaults to the account associated with the\n"
@@ -115,21 +185,153 @@ msgid ""
 "        If --noretweet is given, only native user's tweet will be displayed.\n"
 "        "
 msgstr ""
-"[<canale>|<utente>] [--since <vecchio>] [--max <nuovo>] [--count <numero>] [--noretweet]\n"
+"[<canale>] [--since <più_vecchio>] [--max <più_recente>] [--count <numero>] [--noretweet] [--with-id] [<utente>]\n"
 "\n"
 "        Risponde con la timeline di <utente>. Se <utente> non è specificato,\n"
 "        il valore predefinito è l'account associato a <canale>. Se <canale>\n"
-"        non è fornito, usa quello attuale. Se forniti, --since e --max utilizzano\n"
+"        non è fornito usa quello attuale. Se forniti, --since e --max utilizzano\n"
 "        gli ID dei tweet come limite della richiesta. Se --count è specificato,\n"
 "        utilizza un numero intero come numero dei tweet da mostrare. Se viene\n"
 "        usato --noretweet, saranno mostrati solo i tweet originari dell'utente.\n"
 "        "
 
-#: plugin.py:163
+#: plugin.py:247 plugin.py:368 plugin.py:391 plugin.py:415 plugin.py:458
 msgid "No account is associated with this channel. Ask an op, try with another channel."
 msgstr "Nessun account associato a questo canale. Chiedi a un op o prova un altro canale."
 
-#: plugin.py:173
+#: plugin.py:257
 msgid "This user protects his tweets; you need to fetch them from a channel whose associated account can fetch this timeline."
 msgstr "Questo utente protegge i suoi tweet; devi scaricarli da un canale il cui account associato può recuperare questa timeline."
+
+#: plugin.py:281
+#, docstring
+msgid ""
+"[<channel>] [--since <oldest>]\n"
+"\n"
+"        Replies with the public timeline.\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        If given, --since takes a tweet ID, used as a boundary\n"
+"        "
+msgstr ""
+"[<canale>] [--since <più_vecchio>]\n"
+"\n"
+"        Risponde con la timeline pubblica.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        Se --since è usato prende l'ID di un tweet come limite della richiesta.\n"
+"        "
+
+#: plugin.py:298 plugin.py:328 plugin.py:351
+msgid "No tweets"
+msgstr "Nessun tweet."
+
+#: plugin.py:311
+#, docstring
+msgid ""
+"[<channel>] [--since <oldest>]\n"
+"\n"
+"        Replies with the replies timeline.\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        If given, --since takes a tweet ID, used as a boundary\n"
+"        "
+msgstr ""
+"[<canale>] [--since <più_vecchio>]\n"
+"\n"
+"        Risponde con la timeline delle risposte.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        Se --since è usato prende l'ID di un tweet come limite della richiesta.\n"
+"        "
+
+#: plugin.py:341
+#, docstring
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Current trending topics\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>]\n"
+"\n"
+"        Attuali topic di tendenza.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
+
+#: plugin.py:360
+#, docstring
+msgid ""
+"[<channel>] <user>\n"
+"\n"
+"        Follow a specified <user>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>] <utente>\n"
+"\n"
+"        Segue l'<utente> specificato.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
+
+#: plugin.py:374 plugin.py:397 plugin.py:421 plugin.py:442 plugin.py:464
+msgid "An error occurred"
+msgstr "Si è verificato un errore."
+
+#: plugin.py:383
+#, docstring
+msgid ""
+"[<channel>] <user>\n"
+"\n"
+"        Unfollow a specified <user>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>] <utente>\n"
+"\n"
+"        Smette di seguire l'<utente> specificato.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
+
+#: plugin.py:407
+#, docstring
+msgid ""
+"[<channel>] <id>\n"
+"\n"
+"        Delete a specified status with id <id>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>] <ID>\n"
+"\n"
+"        Cancella uno stato specifico con <ID>\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
+
+#: plugin.py:431
+#, docstring
+msgid ""
+"[<channel>]\n"
+"\n"
+"        Print some stats\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>]\n"
+"\n"
+"        Mostra delle statistiche.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
+
+#: plugin.py:450
+#, docstring
+msgid ""
+"[<channel>] <user>\n"
+"\n"
+"        Return profile image for a specified <user>\n"
+"        If <channel> is not given, it defaults to the current channel.\n"
+"        "
+msgstr ""
+"[<canale>] <utente>\n"
+"\n"
+"        Riporta il profilo dell'<utente> specificato.\n"
+"        Se <canale> non è fornito usa quello attuale.\n"
+"        "
 
